--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,10 @@ djangorestframework-filters==0.8.0
 djangorestframework-jwt==1.9.0
 djoser==0.5.1
 django-extra-fields
+django-cors-headers==1.2.0
 graphene==1.1.3
 graphene-django==1.2.1
+django-filter==0.13.0
 
 Pillow==3.2.0
 
