--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,21 @@
-Django==1.10.5
-
-# channels 
-channels
-asgi-redis
-daphne
+Django==1.11.11
 
 # REST
 djangorestframework==3.5.3
 djangorestframework-filters==0.8.0
 djangorestframework-jwt==1.9.0
-djoser==0.5.1
+djoser==1.1.5
 django-extra-fields
 django-cors-headers==1.2.0
-graphene==1.1.3
-graphene-django==1.2.1
-django-filter==0.13.0
+graphene-django>=2.0.0
+django-filter==1.1.0
 
 Pillow==3.2.0
 
 # dev
 ipdb
 
-uWSGI==2.0.12
+uWSGI==2.0.17
 dj-database-url==0.4.1
 psycopg2==2.6.1
 
